--- a/index.html
+++ b/index.html
@@ -2,13 +2,36 @@
 <html>
 <head>
     <title>My Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Welcome to My Portfolio</h1>
-    <p>Here are some of my projects:</p>
-    <ul>
-        <li><a href="https://github.com/username/repo1">Project 1</a></li>
-        <li><a href="https://github.com/username/repo2">Project 2</a></li>
-    </ul>
+    <header>
+        <h1>Welcome to My Portfolio</h1>
+    </header>
+    <nav>
+        <a href="#about">About</a>
+        <a href="#projects">Projects</a>
+        <a href="#contact">Contact</a>
+    </nav>
+    <div class="container">
+        <section id="about">
+            <h2>About Me</h2>
+            <p>Hi, I'm [Your Name]. I'm a [Your Profession] with experience in [Your Skills].</p>
+        </section>
+        <section id="projects">
+            <h2>Projects</h2>
+            <ul>
+                <li><a href="https://github.com/username/repo1">Project 1</a></li>
+                <li><a href="https://github.com/username/repo2">Project 2</a></li>
+            </ul>
+        </section>
+        <section id="contact">
+            <h2>Contact</h2>
+            <p>Email: [Your Email]</p>
+        </section>
+    </div>
+    <footer>
+        <p>&copy; 2023 [Your Name]. All rights reserved.</p>
+    </footer>
 </body>
 </html>
