--- a/projects/internetUsage.html
+++ b/projects/internetUsage.html
@@ -9,10 +9,10 @@
 <body>
   <div class="background-image"></div>
   <header>
-    <h1>Project 1</h1>
-    <p>Description of Project 1. Explain what it does, technologies used, and your role.</p>
+    <h1>Internet Usage Patterns</h1>
+    <p>This project tries to analyze internet usage patterns around the world uysing Tableau and Python..</p>
     <img src="../images/project1.png" alt="Project 1 Screenshot" style="width: 100%; max-width: 600px;">
-    <p><a href="https://github.com/SamarpanChakraborty97.github.io/internetUsage" target="_blank">View on GitHub</a></p>
+    <p><a href="https://github.com/SamarpanChakraborty97.github.io/InternetUsage" target="_blank">View on GitHub</a></p>
   </header>
   <footer>
     <a href="../index.html">Back to Portfolio</a>
