--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <section id="projects">
     <h2>Projects</h2>
     <div class="projects-container">
-      <a href="projects/project1.html" class="project-link">Project 1</a>
+      <a href="projects/internetUsage.html" class="project-link">Project 1</a>
       <a href="projects/project2.html" class="project-link">Project 2</a>
       <!-- Add more project links as needed -->
     </div>
