--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <header>
     <div class="profile">
       <img src="images/profile.jpg" alt="Your Name">
-      <h1>Your Name</h1>
-      <p>A brief description about yourself. For example: "I'm a web developer passionate about creating beautiful and functional websites."</p>
+      <h1>Samarpan Chakraborty</h1>
+      <p>Data scientist cum Ph.D. researcher. Proficient in working with data to derive data-driven insights. Profivient in data anlysis and ML architectures."</p>
     </div>
   </header>
 
