--- a/projects/internetUsage.html
+++ b/projects/internetUsage.html
@@ -11,7 +11,7 @@
   <header>
     <h1>Internet Usage Patterns</h1>
     <p>This project tries to analyze internet usage patterns around the world uysing Tableau and Python..</p>
-    <img src="../images/internetUsage.png" alt="Project 1 Screenshot" style="width: 100%; max-width: 600px;">
+    <img src="../images/internetUsage.png" alt="Project 1 Screenshot" style="width: 100%; max-width: 600px; height: 100%; max-height: 400px;">
     <p><a href="https://github.com/SamarpanChakraborty97/SamarpanChakraborty97.github.io/tree/main/InternetUsage" target="_blank">View on GitHub</a></p>
   </header>
   <footer>
