--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!-- Header Section -->
   <header>
     <div class="profile">
-      <img src="images/profile.jpg" alt="Your Name">
+      <img src="images/profile2.JPG" alt="Samarpan">
       <h1>Samarpan Chakraborty</h1>
       <p>Data scientist cum Ph.D. researcher. Proficient in working with data to derive data-driven insights. Profivient in data anlysis and ML architectures."</p>
     </div>
