--- a/index.html
+++ b/index.html
@@ -1,63 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Portfolio</title>
-  <link rel="stylesheet" href="styles.css">
-  <!-- Add Font Awesome for icons -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <!-- Background Image -->
-  <div class="background-image"></div>
+    <header>
+        <div class="container">
+            <h1>Your Name</h1>
+            <p>Data Scientist | AI Researcher</p>
+            <nav>
+                <ul>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#publications">Publications</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
-  <!-- Header Section -->
-  <header>
-    <div class="profile">
-      <img src="images/profile2.JPG" alt="Samarpan">
-      <h1>Samarpan Chakraborty</h1>
-      <p>Data scientist cum Ph.D. researcher. Proficient in working with data to derive data-driven insights. Profivient in data anlysis and ML architectures."</p>
-    </div>
-  </header>
+    <section id="about" class="section">
+        <div class="container">
+            <h2>About Me</h2>
+            <p>Brief introduction about yourself, your background, and your expertise.</p>
+        </div>
+    </section>
 
-  <!-- Skills Section -->
-  <section id="skills">
-    <h2>Skills</h2>
-    <div class="skills-container">
-      <div class="skill">
-        <i class="fab fa-html5"></i>
-        <p>HTML5</p>
-      </div>
-      <div class="skill">
-        <i class="fab fa-css3-alt"></i>
-        <p>CSS3</p>
-      </div>
-      <div class="skill">
-        <i class="fab fa-js"></i>
-        <p>JavaScript</p>
-      </div>
-      <div class="skill">
-        <i class="fab fa-git"></i>
-        <p>Git</p>
-      </div>
-      <!-- Add more skills as needed -->
-    </div>
-  </section>
+    <section id="projects" class="section">
+        <div class="container">
+            <h2>Projects</h2>
+            <div class="project">
+                <h3>Project Title</h3>
+                <p>Short description of the project.</p>
+                <a href="#">View Project</a>
+            </div>
+        </div>
+    </section>
 
-  <!-- Projects Section -->
-  <section id="projects">
-    <h2>Projects</h2>
-    <div class="projects-container">
-      <a href="projects/internetUsage.html" class="project-link">Project 1</a>
-      <a href="projects/project2.html" class="project-link">Project 2</a>
-      <!-- Add more project links as needed -->
-    </div>
-  </section>
+    <section id="publications" class="section">
+        <div class="container">
+            <h2>Publications</h2>
+            <ul>
+                <li><a href="#">Title of Publication 1</a> - Conference/Journal Name, Year</li>
+                <li><a href="#">Title of Publication 2</a> - Conference/Journal Name, Year</li>
+            </ul>
+        </div>
+    </section>
 
-  <!-- Footer -->
-  <footer>
-    <p>&copy; 2023 Your Name. All rights reserved.</p>
-  </footer>
+    <section id="contact" class="section">
+        <div class="container">
+            <h2>Contact</h2>
+            <p>Email: your.email@example.com</p>
+            <p>LinkedIn: <a href="#">linkedin.com/in/yourname</a></p>
+        </div>
+    </section>
 </body>
 </html>
